--- a/src/contents/index.mdx
+++ b/src/contents/index.mdx
@@ -2,8 +2,6 @@
 title: Hello, world!
 ---
 
-# Introduction
-
 During the 2017 London Bridge attack, while people were trying to escape from the area, prices of Uber races began to rise, until they doubled their normal price. Many people were outraged: what until then had been an accepted mechanism (more demand, higher prices) suddenly proved unacceptable. The choice of price was not managed by human beings, but by an algorithm, and in a short time it was disabled.
 
 This is just one example of how digital platforms that now pervade our community, by mediating our access to information, generate sometimes unexpected results that challenge social conventions. It also represents just the tip of the iceberg, the most explicit evidence of the radical and widespread impact that information and communication technologies - particularly the Internet and the Web - have on society.
@@ -133,11 +131,11 @@ The course is composed by five modules, representing the different competencies 
 
 Teaching assistants will support professors during feedback sessions and students in the development of the projects.
 
-- *Michele Mauri.* Introduction to data visualization, information visualization, information design
-- *Gabriele Colombo.* Issue mapping with Digital Methods
-- *Ángeles Briones.* Data publics
-- *Salvatore Zingale.* Semiotics
-- *Simone Vantini.* Statistics
+1. *Michele Mauri.* Introduction to data visualization, information visualization, information design
+2. *Gabriele Colombo.* Issue mapping with Digital Methods
+3. *Ángeles Briones.* Data publics
+4. *Salvatore Zingale.* Semiotics
+5. *Simone Vantini.* Statistics
 
 # Bibliography
 ## Phase 2: Data as Artifact. References
