--- a/src/contents/index.mdx
+++ b/src/contents/index.mdx
@@ -10,13 +10,11 @@ While in the last decade the concerns were mainly user-centered, thinking mainly
 
 These issues do not have clear and unambiguous solutions and generate dense and complex debates that interweave alliances and oppositions, involving many different actors through digital conversations. At a first analysis the situation stalls: complexity, by definition, is impossible to reduce without losing its wealth; at the same time, it remains incomprehensible without its simplification. As communication designers we can - and we should - contribute to the understanding of these phenomena and orienting possible (re)actions. As complex and controversial problems can not be faced by a single actor, we can represent and share the debate that defines and nourishes them so that any stakeholder can find its own position.
 
-The studio-course is structured in different phases, on a path that explores different dimensions of data analysis, information and communication design. Students will start by representing the theme using structured data and information produced and shared by reputable sources, designing a first visual synthesis. At this stage, to ensure a correct relationship with the data, statistical notions and tools are introduced. In the second phase we will focus on the debates that feed the controversies around the selected topics by using unstructured data and information produced and shared by non-institutional organizations, communities, collective entities or individuals and activists via the Internet. Finally students will design a (data) experience with the aim of engaging a broad public in understanding the complexity of the issues at hand.
-
 The different phases of the course require to identify the most suitable communication languages and tools, both digital and physical, to exploit their specific potential and to synthetize all the competences acquired.
 
 Transversally, the concepts of social complexity, the role of statistics tools and methods in the visualization process, and the idea of visualization as intersemiotic translation - such as narrative and discourse - will be deepened. The "visual discourse" in its various forms of manifestation will be then considered as an argumentative strategy, in which narration and dramatization complement the direct communication of data and information. Rhetorical-argumentative figures, in particular those based on analogy and metaphor, will be applied - consistently with the different design moments of the lab - as both knowledge tools and communicative devices, exploiting the potential for facilitating access to cognition.
 
-# Objectives
+# Teaching Aims
 At the end of the course, students will have gained:
 1. Knowledge in the data visualization, information visualization, information design disciplines, and the role of communication design;
 2. Knowledge and use of the visual variables and application of communication design to visualization of data and information;
