--- a/src/contents/explananda.mdx
+++ b/src/contents/explananda.mdx
@@ -2,4 +2,12 @@
 title: Poster - Visual explanations
 ---
 
-Description of the work. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+### Poster
+# Visual Explanations
+
+The visual representation of a phenomenon is always mediated by its translations into data. As designers, we often focus on translating data into something visual, but how was that data produced?
+
+Statistical methods are used to translate phenomena into data, making them analyzable — at known prices: each method has strengths and weaknesses.
+Datasets are the result of a design process, and therefore is fundamental for designers to have an idea of the processes used to produce them.
+
+During the first month of the course, students studied eight algorithmic statistical methods to produce a poster visually explaining how they work, third strength and weaknesses.
