--- a/src/contents/projects.mdx
+++ b/src/contents/projects.mdx
@@ -2,12 +2,14 @@
 title: Group projects
 ---
 
-In the second phase of the course students learn how to make use of online data to study social and cultural phenomena: in a question-driven process, each group design protocols for data collection, analyze data and produce research findings using data visualizations. The outcome of this phase is an interactive research report.
+### Report — Website
+# Data as artefact & Data publics
 
-Each report focuses on a specific issue: apps for face and body modifications; the aesthetic of conspiracy theories; the politics of content moderator jobs online; hashtag hijacking and other kinds of digital activism; the relationship between digital platforms and physical places; automation and content farms on Youtube.
+In the second phase of the course students learnt how to make use of online data to study social and cultural phenomena. Online platforms, websites and social networks mediate our access to information: how can we make it visible? In a question-driven process, each group explored a specific topic, designed protocols for data collection, analyzed data and produced research findings using data visualizations.
 
-In the last phase, students turn part of the research carried out in the previous phase into discursive communication artifacts that expose, show or make known the critical aspects of the subjects researched to a specific audience. To this end, the aim is to design communication artifacts that invite the public to reflect and act on the explored subjects.
+By identifying the mediating platform/services and finding ways to repurpose their affordances, students created the printed reports you can browse in this section.
 
-Students reflect on the meaning and agency of "the public", how different groups mobilize around various issues and how data can play a central role in the process of forming publics, and they are also encouraged to recognize the political role that their design practices play with technology and how they impact on society.
+In the last phase, students turned part of the research carried out in the previous phase into discursive communication artifacts that expose, show or make known the critical aspects of the subjects researched to a specific audience. The aim was to design communication artifacts that invited the public to reflect and act on the explored subjects.
+Students reflected on the meaning and agency of the notion of "the public": how different groups mobilize around various issues and how data can play a central role in the process of forming publics. Students were also encouraged to recognize the political role that their design practices play with technology and how they impact on society.
 
-The result of the phase is an experimental digital artifact that can be used by a specific audience to act on the topic.
+The result of the phase is a digital artifact designed to illustrate students’ view on the chosen topic, by leveraging on digital and interactive techniques.
